# py-js

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  FAQ.md  LICENSE  Makefile  README.md  README.txt  TODO.md  api.c  api.h  api.pxd  api.pyx  build.sh  build_pymx.sh  deploy.sh  duplicates.txt  header.h  hello.py  maxapi.c  maxapi.h  maxapi.pyx  project.leo  py.c  py.h  py.maxhelp  py.new.c  py.old.c  pyproject.toml  pytest.maxhelp  requirements.txt  reset.diff  workbook.leo
source/demos/cmx/: CMakeLists.txt  README.md  cmx.c  cmx.cpp  cmx.h
source/demos/demo/: CMakeLists.txt  demo.c
source/demos/kernel/: CMakeLists.txt  README.md  kernel.cpp
source/demos/mambo/: CMakeLists.txt  README.md  py.h
source/demos/mpyx/: CMakeLists.txt  README.md  mpy_interpreter.h  mpy_interpreter.h.disable  mpyx.cpp
source/demos/mpyx/min-api/: ReadMe.md
source/demos/mpyx/min-api/include/: c74_min_argument.h  c74_min_atom.h  c74_min_attribute.h  c74_min_attribute_impl.h  c74_min_buffer.h  c74_min_catch.h  c74_min_dataspace.h  c74_min_event.h  c74_min_flags.h  c74_min_graphics.h  c74_min_impl.h  c74_min_object.h  c74_min_object_wrapper.h  c74_min_operator_sample.h  c74_min_operator_vector.h  c74_min_patcher.h  c74_min_path.h  c74_min_string.h  c74_min_texteditor.h  c74_min_timer.h  c74_min_unittest.h
source/demos/mpyx/min-api/script/: min-package.cmake  min-posttarget.cmake
source/projects/cmake-pyjs/: CMakeLists.txt
source/projects/cobra/: CHANGELOG.md  CMakeLists.txt  README.md  cobra.c  cobra.cpp  py_interpreter.h
source/projects/jmx/: CMakeLists.txt  NOTES.md  README.md  jmx.c  server.py
source/projects/jmx/notes/: jupyter-experiment.md
source/projects/jmx/tests/: Makefile  test_czmq_client.c  test_pczmq_client.c  test_pzmq_client.c  test_pzmq_server.c  test_spawn.c
source/projects/mambo/: CHANGELOG.md  CMakeLists.txt  README.md  mambo.c  py.h
source/projects/mpy/: CMakeLists.txt  README.md  micropython.cmake  mpy.c
source/projects/mpy/micropython_embed/genhdr/: mpversion.h
source/projects/oscar/: CMakeLists.txt  README.md  ext_test.cpp  ext_test.h  oscar.c  oscar.h  test.assert.cpp  test.db.cpp  test.equals.cpp  test.log.cpp  test.master.c  test.port.cpp  test.runner.c  test.sample~.cpp  test.terminate.cpp  test.unit.c
source/projects/pktpy/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  pktpy.cpp  pktpy.h  pocketpy.h  user_config.h
source/projects/pktpy/new/: README.md  pktpy.cpp  pktpy.h  pocketpy.h  user_config.h
source/projects/pktpy/scripts/: demo.py
source/projects/pktpy/test_c/: build.sh
source/projects/pktpy/test_cpp/: demo.cpp
source/projects/pktpy/test_gch/: build.sh  demo.cpp
source/projects/pktpy/tests/inherit/: build.sh  main.cpp
source/projects/pktpy/tests/pocketpy_dylib/: CMakeLists.txt  README.md  dsp.c
source/projects/pktpy/tests/test_c/: demo.cpp
source/projects/pktpy/tests/test_cpp/: build.sh  demo.cpp  test.py
source/projects/pktpy/tests/test_cpp2/: build.sh
source/projects/pktpy/tests/test_str_replace/: main  main.cpp
source/projects/pktpy2/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  pktpy2.c  pktpy2.h  pktpy2_api.h  pocketpy.c  pocketpy.h
source/projects/pktpy2/tests/call/: f_args.c  f_kwds.c
source/projects/pktpy2/tests/call_py_func/: call_py_func.c
source/projects/pktpy2/tests/casting/: casting.c
source/projects/pktpy2/tests/person/: person.c
source/projects/pktpy2/tests/print_args/: print_args.c
source/projects/pktpy2/tests/simple_struct/: simple_struct.c
source/projects/pktpy2/tests/test_iter/: Makefile  test_iter.c
source/projects/pktpy2/tests/variadic/: test_variadic.c
source/projects/py/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  api.c  api.h  api.md  api.pyx  api_jit.pxd  api_max.pxd  api_msp.pxd  api_py.pxd  py.c  py.h  py_mod.h  py_mod.py  py_prelude.h  py_prelude.new.py  py_prelude.py  pyjs.c  pyjs.h
source/projects/py/builder/: README.md  __main__.py  cli.py  cmake.py  config.py  core.py  depend.py  factory.py  install.py  package.py  patch.py  release.py  setup-map.txt  shell.py  sign.py  utils.py
source/projects/py/builder/ext/: __init__.py  pbar.py
source/projects/py/notes/: build-times.md  build-times.txt  build-variants.md  limitedapi-py.md  not_available.txt  optimization.md  refcounting.md
source/projects/py/notes/builder/: builder_uml.mdj  building-pyext-flext.md  cmake.md  codesign-notarize.md  fix_arm64_bug.md  mappings.md  matrix.xlsx  modules.xlsx  relocatable-python.md
source/projects/py/scripts/: CMakeLists.txt  analyze.py  b64.py  bash_complete.sh  build_dev.sh  build_universal.sh  check_numpy.py  fix-pyjs-standalone.sh  get_beeware.py  notarize.sh  parse.py  parsegen.py  py2c.py  rm_disabled_workflow_runs.sh  set_py_ver.py  stripw.py
source/projects/py/targets/: common.xcconfig  optimize.xcconfig
source/projects/py/tests/: Makefile  build.sh  conftest.py  fourchar.py  installer.py  py_handle_error_traceback.c  py_parser.py  syntax.py  test_build_embed_api.sh  test_call.c  test_call.py  test_clip_assign.c  test_dict_syntax.py  test_download_tar.py  test_matrix_flattern.c  test_minim.c  test_modulegraph2.py  test_path_join.c  test_pipe.py  test_pthread.c  test_py.py  test_pyver.c  test_str_replace.c  test_to_dict.py  test_translate.c
source/projects/pyjs/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  pyjs.c  pyjs.h
source/projects/zedit/: .gitignore  CMakeLists.txt  README.md  py.h  webroot  zedit.c
source/projects/zedit/n4m/: editor.mjs  help.html  index.html  package.json  zedit.js  zedit.maxpat
source/projects/zedit/web/: .gitignore  Makefile  editor.mjs  index.html  package.json  rollup.config.mjs  terminal.mjs
source/projects/zedit/web_monaco/: README.md
source/projects/zedit/web_orig/: Makefile  index.html  rollup.config.mjs
source/projects/zpy/: CHANGELOG.md  CMakeLists.txt  README.md  zpy.c  zpy_client.py  zpy_server.py
source/projects/zpy/tests/: build.sh
source/projects/zthread/: CHANGELOG.md  CMakeLists.txt  README.md  server.py  zthread.c
(+1245 files in other folders)
